<resources>
    <string name="app_name">薇米畅聊</string>
    <string name="update_userInfo_nickName_empty">昵称不能为空</string>
    <string name="update_userInfo_email_empty">邮箱不能为空</string>
    <string name="nickName_length_error">昵称长度不超过10位</string>
    <string name="email_format_error">邮箱格式不正确</string>
    <string name="email_tooltip">邮箱必须是有效邮箱</string>
    <string name="next">下一步</string>
    <string name="modify_nickName">修改昵称</string>
    <string name="modify_email">修改邮箱</string>
    <string name="checkCode_send_success">验证码已发送至您的邮箱</string>
    <string name="checkCode_tooltip">验证码从您的邮箱里获取</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="checkCode_empty">验证码不能为空</string>
    <string name="open_picture_failed">打开相册失败</string>
    <string name="get_picture_failed">获取图片失败</string>
    <string name="cut_picture_failed">无法剪切图片</string>
    <string name="network_not_available">网络不可用</string>
    <string name="group_chat">创建群组</string>
    <string name="no_friends">暂无好友</string>
    <string name="add_successful">添加成功</string>
    <string name="remove_group_members">确认移除以下群成员?</string>
    <string name="edit_group_name">填写群名称(2-10字)</string>
    <string name="must_select_friend">请至少邀请两位好友创建群组</string>
    <string name="dialog_bottom_picture">拍照</string>
    <string name="dialog_bottom_import_from_local">从本地导入</string>
    <string name="group_name_not_is_null">群名称不能为空</string>
    <string name="group_name_size_is_one">群名称不少于2个字</string>
    <string name="group_name_size_limit">群名称不少于10个字</string>
    <string name="create_group_success">群组创建成功</string>
    <string name="group_header_api_fail">群组头像接口请求失败</string>
    <string name="group_create_api_fail">群组创建接口请求失败</string>
    <string name="upload_portrait_failed">上传头像失败</string>
    <string name="startGroupChat">发起群聊</string>
    <string name="my_group_list">我的群组</string>
    <string name="all_group_list">申请加入</string>
    <string name="search">搜索</string>
    <string name="fr_group_list_not_join_the_group">暂未加入群组</string>
    <string name="not_join_group">暂无未加入的群组</string>
    <string name="ac_group_list_group_number">%1$d个群组</string>
    <string name="apply_success">申请成功</string>
    <string name="apply_failed">申请失败</string>
    <string name="system_notice">系统消息</string>
    <string name="group_apply">群组申请</string>
    <string name="apply_agree">接  受</string>
    <string name="apply_refuse">拒  绝</string>
    <string name="apply_join">申请加入</string>
    <string name="not_limit_character">不能超过个%1$d个字符</string>
    <string name="all_group_member">全部群成员</string>
    <string name="group_portrait">群头像</string>
    <string name="group_name">群名称</string>
    <string name="message_notice">消息免打扰</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="quit_group">删除并退出</string>
    <string name="dismiss_group">解散并退出</string>
    <string name="user_details">用户详情</string>
    <string name="black_state">黑名单状态</string>
    <string name="divided_string">、</string>
    <string name="change_group_name">修改群名称为</string>
    <string name="quit_groups">退出了群组</string>
    <string name="dismiss_groups">解散了群组</string>
    <string name="join_group">加入了群组</string>
    <string name="to_join_group">加入了群组</string>
    <string name="invitation">邀请</string>
    <string name="remove_group_before_str">将</string>
    <string name="remove_group_after_str">移出了群组</string>
    <string name="server_error">请求失败，请稍后重试</string>
    <string name="group_memeber_num">群组信息(%1$d)</string>
    <string name="all_group_member_num">全部成员(%1$d)</string>
    <string name="setting_failed">设置失败</string>
    <string name="clear_success">清除成功</string>
    <string name="clear_failed">清除失败</string>
    <string name="clean_group_chat_history">确定删除群聊天记录吗</string>
    <string name="update_success">更改成功</string>
    <string name="update_group_name">新名称(2-10字)</string>
    <string name="update_group_name_title">修改群名称</string>
    <string name="select_group_member">选择群组成员</string>
    <string name="remove_group_member">移除群组成员</string>
    <string name="add_group_member">添加群组成员</string>
    <string name="confirm_quit_group">确认退出群组?</string>
    <string name="confirm_dismiss_group">确认解散群组?</string>
    <string name="dismiss_success">解散成功</string>
    <string name="quit_success">退出成功</string>
    <string name="group_dismissed">群组被解散</string>
</resources>
