<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weiMi_bg"
    android:orientation="vertical">
    <include layout="@layout/common_title"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <com.weimi.weimichat.ui.widget.NoScrollGridView
                android:id="@+id/userGridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingBottom="14dp"
                android:background="#ffffff"
                android:gravity="start"
                android:listSelector="@android:color/transparent"
                android:numColumns="6"/>
            <TextView
                android:id="@+id/all_group_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="查看全部群成员"
                android:gravity="center"
                android:paddingBottom="14dp"
                android:textSize="16sp"
                android:background="@color/white"
                />
            <LinearLayout
                android:id="@+id/li_group_header"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_list_item_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/group_portrait"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <com.weimi.weimichat.server.widget.SelectableRoundedImageView
                    android:id="@+id/group_header"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="14dp"
                    android:scaleType="centerCrop"
                    app:sriv_left_bottom_corner_radius="3dip"
                    app:sriv_left_top_corner_radius="3dip"
                    app:sriv_right_bottom_corner_radius="3dip"
                    app:sriv_right_top_corner_radius="3dip" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:background="#dfdfdd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/li_group_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_list_item_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/group_name"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/group_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:maxLines="1"
                    android:textColor="#999"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/message_notice"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <com.weimi.weimichat.ui.widget.SwitchButton
                    android:id="@+id/sw_group_notfaction"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@drawable/ios_thumb"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:background="#dfdfdd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/group_clean"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_list_item_bg"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/clean_message"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />


            </LinearLayout>


            <Button
                android:id="@+id/group_quit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rs_select_btn_red"
                android:text="@string/quit_group"
                android:textColor="#FFF"
                android:textSize="16sp" />

            <Button
                android:id="@+id/group_dismiss"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rs_select_btn_red"
                android:text="@string/dismiss_group"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>